Reordenación del menú de navegación

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,16 +25,16 @@
                         @if (isLoggedIn)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-controller="UserGameCollections" asp-action="Index">Mi Colección</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-controller="GameSessions" asp-action="Index">Game Sessions</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-controller="Statistics" asp-action="Index">Estadísticas</a>
+                                <a class="nav-link text-light" asp-controller="UserGameCollections" asp-action="Index">Mi Colección de Juegos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-controller="Games" asp-action="Index">Gestión de Juegos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-controller="GameSessions" asp-action="Index">Sesiones de Juego</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-controller="Statistics" asp-action="Index">Estadísticas</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-controller="User" asp-action="Logout">Cerrar Sesión</a>
