--- a/Views/UserGameCollections/Index.cshtml
+++ b/Views/UserGameCollections/Index.cshtml
@@ -8,9 +8,7 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>ID</th>
             <th>Game ID</th>
-            <th>Usuario</th>
             <th>Acciones</th>
         </tr>
     </thead>
@@ -18,12 +16,8 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.Id</td>
-                <td>@item.GameId</td>
-                <td>@item.User</td>
+                <td>@item.GameTitle</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Detalles</a>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Eliminar</a>
                 </td>
             </tr>
@@ -32,5 +26,5 @@
 </table>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Añadir nuevo</a>
+    <a asp-action="Create" class="btn btn-primary">Añadir Juego a la colección </a>
 </p>
