--- a/Views/UserGameCollections/Index.cshtml
+++ b/Views/UserGameCollections/Index.cshtml
@@ -18,7 +18,7 @@
             <tr>
                 <td>@item.GameTitle</td>
                 <td>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Eliminar</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Eliminar de la colección</a>
                 </td>
             </tr>
         }
