--- a/Views/GameSessions/Index.cshtml
+++ b/Views/GameSessions/Index.cshtml
@@ -24,7 +24,7 @@
                     @if (session.Screenshot != null && session.Screenshot.Length > 0)
                     {
                         <a class="btn btn-sm btn-primary"
-                           href="@($"{ViewBag.ApiBaseUrl}GameSessions/{session.Id}/Screenshot")" target="_blank">
+                           href="@($"https://localhost:9095/rest/api/GameSessions/{session.Id}/Screenshot")" target="_blank">
                             Descargar
                         </a>
                     }
