--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -26,7 +26,7 @@
         <div class="mt-3">
             <h5>Imagen:</h5>
             <img src="@Model.ScreenshotUrl" alt="Screenshot" class="img-fluid" />
-        }
+        </div>
     }
 </div>
 
