--- a/Views/UserGameCollections/Index.cshtml
+++ b/Views/UserGameCollections/Index.cshtml
@@ -18,6 +18,7 @@
             <tr>
                 <td>@item.GameTitle</td>
                 <td>
+                    <a asp-action="Details" asp-controller="Games" asp-route-id="@item.GameId" class="btn btn-info btn-sm">Ver detalles</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Eliminar de la colección</a>
                 </td>
             </tr>
