--- a/Views/Games/Details.cshtml
+++ b/Views/Games/Details.cshtml
@@ -25,7 +25,7 @@
     {
         <div class="mt-3">
             <h5>Imagen:</h5>
-            <img src="@Model.ScreenshotUrl" alt="Screenshot" class="img-fluid" />
+            <img src="@Model.ScreenshotUrl" alt="Screenshot" class="img-fluid w-50" />
         </div>
     }
 </div>
